--- a/ca-3/src/App.css
+++ b/ca-3/src/App.css
@@ -21,7 +21,6 @@
 }
 .view_btn{
   margin-left:85% ;
-  margin-top: 2%;
   border-radius: 10px;
   padding: 5px;
   background-color: #d45555;
@@ -61,6 +60,12 @@
   text-align: center;
   border-radius: 10px;
 }
+img{
+  width: 80px;
+  border-radius: 40px;
+  margin-left: 10%;
+  height: 80px;
+}
 .reset{
   padding: 5px;
   margin-bottom: 10%;
@@ -74,6 +79,10 @@
   }
   .boby_main{
     margin: 20px;
+  }
+  img{
+    width: 40px;
+    height: 40px;
   }
   .page{
     height: 100vh;
